#4-Spring Rest + HAL Explorer 디펜던시 추가 및 Test

--- a/jm-project-board/src/main/resources/application.yaml
+++ b/jm-project-board/src/main/resources/application.yaml
@@ -41,9 +41,8 @@ spring:
   #테스트 데이터를 언제 작동 시킬것인가. -> 항상
   sql.init.mode: always
 
-    #123
-    #data.rest:
-    #base-path: /api
-    #data:
-    #rest:
-  #detection-strategy: annotated
+  data.rest:
+  data:
+    rest:
+      base-path: /api
+      detection-strategy: annotated
