--- a/jm-project-board/build.gradle
+++ b/jm-project-board/build.gradle
@@ -31,8 +31,34 @@ dependencies {
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+    //query DSL
+    implementation 'com.querydsl:querydsl-jpa'
+    implementation 'com.querydsl:querydsl-core'
+    implementation 'com.querydsl:querydsl-collections'
+    annotationProcessor "com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jpa"
+    annotationProcessor "jakarta.annotation:jakarta.annotation-api" //에러대비
+    annotationProcessor "jakarta.persistence:jakarta.persistence-api"//에러대비
 }
 
 tasks.named('test') {
     useJUnitPlatform()
+}
+
+//querydsl 설정
+def generated  = 'src/main/generated'
+
+//query QClass 파일 생성 위치 지정
+tasks.withType(JavaCompile) {
+    options.getGeneratedSourceOutputDirectory().set(file(generated))
+}
+
+//java source set에 querydsl Qclass 위치 추가
+sourceSets {
+    main.java.srcDirs += [ generated ]
+}
+
+//gradle clean 시에 Qclass디렉토리 삭제
+clean {
+    delete file(generated)
 }
