--- a/jm-project-board/src/main/resources/application.yaml
+++ b/jm-project-board/src/main/resources/application.yaml
@@ -18,7 +18,8 @@ spring:
   #DB연동 관련
   datasource:
     url: jdbc:mysql://localhost:3306/board
-    username: board-project-jm
+    #board-project-jm
+    username: jm
     password: wjdals@@97
     driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
@@ -46,3 +47,6 @@ spring:
     rest:
       base-path: /api
       detection-strategy: annotated
+  thymeleaf3:
+    decoupled-logic: true
+
